Updated features and about text
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1562 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/com.sun.syndication-feature/feature.properties
+++ b/com.sun.syndication-feature/feature.properties
@@ -208,7 +208,7 @@
 featureName=ROME: RSS and Atom Utilities
 
 # "providerName" property - name of the company that provides the feature
-providerName=Sourceforge.net
+providerName=EclipseTrader.org
 
 # "description" property - description of the feature
 description=RSS and Atom Utilities.
