--- a/org.eclipsetrader.platform/plugin.properties
+++ b/org.eclipsetrader.platform/plugin.properties
@@ -16,7 +16,7 @@ Version: {0}\n\
 Build id: {1}\n\
 \n\
 (c) Copyright EclipseTrader contributors and others 2004-2011. All rights reserved.\n\
-Visit http://eclipsetrader.sourceforge.net\n\
+Visit http://www.eclipsetrader.org\n\
 \n\
 Icons artwork from famfamfam.com http://www.famfamfam.com/lab/icons/silk/\n\
 \n\
