--- a/org.eclipsetrader.yahoo/about.ini
+++ b/org.eclipsetrader.yahoo/about.ini
@@ -8,8 +8,8 @@
 # dialog (translated).  Maximum 15 lines and 75 characters per line.
 aboutText=Yahoo! Finance Connector\n\
 \n\
-(c) Copyright EclipseTrader contributors and others 2004-2009.  All rights reserved.\n\
-Visit http://eclipsetrader.sourceforge.net\n
+(c) Copyright EclipseTrader contributors and others 2004-2011.  All rights reserved.\n\
+Visit http://www.eclipsetrader.org\n
 
 # Property "featureImage" contains path to feature image (32x32)
 featureImage=yahoo32.gif
