--- a/org.eclipsetrader.brokers.paper/about.properties
+++ b/org.eclipsetrader.brokers.paper/about.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004-2007 Marco Maccaferri and others.
+# Copyright (c) 2004-2011 Marco Maccaferri and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -21,5 +21,5 @@ blurb=Paper Trading Broker\n\
 Version: {0}\n\
 Build id: {1}\n\
 \n\
-(c) Copyright EclipseTrader contributors and others 2004-2008.  All rights reserved.\n\
-Visit http://eclipsetrader.sourceforge.net\n\
+(c) Copyright EclipseTrader contributors and others 2004-2011.  All rights reserved.\n\
+Visit http://www.eclipsetrader.org\n\
