--- a/org.eclipsetrader.platform/about.properties
+++ b/org.eclipsetrader.platform/about.properties
@@ -22,4 +22,4 @@ Version: {0}\n\
 Build id: {1}\n\
 \n\
 (c) Copyright EclipseTrader contributors and others 2004-2011.  All rights reserved.\n\
-Visit http://eclipsetrader.sourceforge.net\n\
+Visit http://www.eclipsetrader.org\n\
