Cleaned up perspectives setup
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1563 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.directa/plugin.xml
+++ b/org.eclipsetrader.directa/plugin.xml
@@ -266,5 +266,38 @@
             type="java.lang.Object">
       </propertyTester>
    </extension>
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="org.eclipsetrader.ui.traderPerspective">
+         <view
+               id="org.eclipsetrader.directa.browser"
+               minimized="false"
+               relationship="stack"
+               relative="org.eclipsetrader.ui.views.watchlist"
+               visible="false">
+         </view>
+      </perspectiveExtension>
+      <perspectiveExtension
+            targetID="org.eclipsetrader.ui.charts">
+         <view
+               id="org.eclipsetrader.directa.browser"
+               minimized="false"
+               relationship="stack"
+               relative="org.eclipsetrader.ui.chart"
+               visible="false">
+         </view>
+      </perspectiveExtension>
+      <perspectiveExtension
+            targetID="org.eclipsetrader.news.perspective">
+         <view
+               id="org.eclipsetrader.directa.browser"
+               minimized="false"
+               relationship="stack"
+               relative="org.eclipsetrader.news.browser"
+               visible="false">
+         </view>
+      </perspectiveExtension>
+   </extension>
 
 </plugin>
