Enabled all launchers and default news provider
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1568 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.platform/plugin_customization.ini
+++ b/org.eclipsetrader.platform/plugin_customization.ini
@@ -41,6 +41,9 @@ org.eclipsetrader.ui.charts/INITIAL_BACKFILL_METHOD=0
 org.eclipsetrader.ui.charts/INITIAL_BACKFILL_START_DATE=19900101
 org.eclipsetrader.ui.charts/INITIAL_BACKFILL_YEARS=10
 
+# ui defaults
+org.eclipsetrader.ui/RUN_ALL_LAUNCHERS=true
+
 # Yahoo! Finance
 org.eclipsetrader.yahoo/DRIVER=org.eclipsetrader.yahoo.internal.core.connector.StreamingConnector
 org.eclipsetrader.yahoo/NEWS_UPDATE_INTERVAL=15
@@ -52,7 +55,4 @@ org.eclipsetrader.yahoo/SUBSCRIBE_US_EARNINGS=true
 org.eclipsetrader.yahoo/SUBSCRIBE_US_M_A=true
 org.eclipsetrader.yahoo/SUBSCRIBE_US_UPGRADES_DOWNGRADES=true
 org.eclipsetrader.yahoo/SUBSCRIBE_US_IPOS=true
-
-# OpenTick
-org.eclipsetrader.opentick/SERVER=delayed1.opentick.com
-org.eclipsetrader.opentick/PORT=10015
+org.eclipsetrader.news/org.eclipsetrader.news.yahoo=true
