Fixed project names
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1599 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/com.sun.syndication.fetcher/.project
+++ b/com.sun.syndication.fetcher/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.java.rome.fetcher</name>
+	<name>com.sun.syndication.fetcher</name>
 	<comment></comment>
 	<projects>
 	</projects>
