--- a/org.eclipsetrader.repository.hibernate.derby/.project
+++ b/org.eclipsetrader.repository.hibernate.derby/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipsetrader.repository.local.derby</name>
+	<name>org.eclipsetrader.repository.hibernate.derby</name>
 	<comment></comment>
 	<projects>
 	</projects>
