Build scripts updated to build Hibernate plugins and target Eclipse platform 3.7.1
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1614 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.releng/build.xml
+++ b/org.eclipsetrader.releng/build.xml
@@ -1,13 +1,14 @@
 <project name="Product Build">
     <property name="eclipse.home" value="${user.home}/eclipse"/>
     <property name="buildDirectory" value="${user.home}/eclipsetrader.build.p2"/>
-    <property name="baseLocation" value="${user.home}/eclipse-platform-3.5"/>
+    <property name="baseLocation" value="${user.home}/eclipse-platform-3.7"/>
 
     <available file="${buildDirectory}/label.properties" property="label.properties.exists" />
     <property file="${buildDirectory}/label.properties" />
 
     <available file="${buildDirectory}/wc" type="dir" property="wc.present"/>
     <property name="tag" value="http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk"/>
+    <property name="vendor_url" value="http://svn.eclipsetrader.org/svnroot/eclipsetrader/vendor"/>
 
     <path id="project.classpath">
         <pathelement location="${basedir}/libs/svnjavahl.jar"/>
@@ -50,34 +51,29 @@ buildLabel=${buildLabel}</echo>
 	    <echo message="PDE Build ${eclipse.pde.build}"/>
 	</target>
 
-	<target name="fetch-checkout" description="Checking out source from repository..." unless="wc.present">
-		<svn>
-			<checkout url="${tag}" destpath="${buildDirectory}/wc" revision="HEAD"/>
-		</svn>
-        <cvs cvsRoot=":pserver:anonymous@dev.eclipse.org:/cvsroot/eclipse" package="org.eclipse.ui.workbench" dest="${buildDirectory}/wc" command="checkout" quiet="true" />
-        <cvs cvsRoot=":pserver:anonymous@dev.eclipse.org:/cvsroot/eclipse" package="org.eclipse.sdk-feature/features/org.eclipse.rcp" command="checkout -d 'org.eclipse.rcp-feature'" dest="${buildDirectory}/wc" quiet="true" />
-	</target>
-
-	<target name="fetch-update" description="Upadting source from repository..." if="wc.present">
-		<svn>
-			<update dir="${buildDirectory}/wc"/>
-		</svn>
-        <cvs cvsRoot=":pserver:anonymous@dev.eclipse.org:/cvsroot/eclipse" package="org.eclipse.ui.workbench" dest="${buildDirectory}/wc" command="update" quiet="true" />
-        <cvs cvsRoot=":pserver:anonymous@dev.eclipse.org:/cvsroot/eclipse" command="update -d 'org.eclipse.rcp-feature'" dest="${buildDirectory}/wc" quiet="true" />
-	</target>
-
-    <target name="fetch.cvs" description="Checking out source from repository...">
-        <cvs cvsRoot=":pserver:anonymous@dev.eclipse.org:/cvsroot/eclipse" package="org.eclipse.ui.workbench" tag="${cvs.tag}" dest="${buildDirectory}/wc" command="checkout" quiet="true" />
-        <cvs cvsRoot=":pserver:anonymous@dev.eclipse.org:/cvsroot/eclipse" package="org.eclipse.sdk-feature/features/org.eclipse.rcp" tag="${cvs.tag}" command="checkout -d 'org.eclipse.rcp-feature'" dest="${buildDirectory}/wc" quiet="true" />
+    <target name="fetch-checkout" description="Checking out source from repository..." unless="wc.present">
+        <svn>
+            <checkout url="${tag}" destpath="${buildDirectory}/wc" revision="HEAD"/>
+            <checkout url="${vendor_url}/org.eclipse.ui.workbench/current" destpath="${buildDirectory}/wc/org.eclipse.ui.workbench" revision="HEAD"/>
+            <checkout url="${vendor_url}/org.eclipse.rcp-feature/current" destpath="${buildDirectory}/wc/org.eclipse.rcp-feature" revision="HEAD"/>
+        </svn>
     </target>
 
-	<target name="fetch" depends="fetch.cvs,fetch-checkout,fetch-update">
+    <target name="fetch-update" description="Updating source from repository..." if="wc.present">
+        <svn>
+            <update dir="${buildDirectory}/wc"/>
+        </svn>
+    </target>
+
+	<target name="fetch" depends="fetch-checkout,fetch-update">
 		<delete dir="${buildDirectory}/features"/>
 		<copy todir="${buildDirectory}/features">
 			<fileset dir="${buildDirectory}/wc">
 				<include name="*-feature/**/*" />
 			</fileset>
+            <mapper type="regexp" from="(.*)-feature(.*)" to="\1\2" />
 		</copy>
+
 		<delete dir="${buildDirectory}/plugins"/>
 		<copy todir="${buildDirectory}/plugins">
 			<fileset dir="${buildDirectory}/wc">
@@ -87,9 +83,8 @@ buildLabel=${buildLabel}</echo>
 			</fileset>
 		</copy>
 
-        <replace file="${buildDirectory}/wc/org.eclipse.ui.workbench/META-INF/MANIFEST.MF" value="I20110515-1000" token="qualifier" />
-        <replace file="${buildDirectory}/wc/org.eclipse.rcp-feature/feature.xml" value="R35x_v20110515-9SA0FxwFnoCU5XxWItFdXXb27BA6" token="qualifier" />
         <patch patchfile="durable_folder.patch" dir="${buildDirectory}/plugins/org.eclipse.ui.workbench" strip="0" />
+        <patch patchfile="durable_folder_feature.patch" dir="${buildDirectory}/features/org.eclipse.rcp" strip="0" />
 	</target>
 
 	<target name="build" depends="create.label.properties,pde.build.init">
@@ -100,25 +95,85 @@ buildLabel=${buildLabel}</echo>
             <include name="**/config.ini" />
         </replace>
         
-		<java jar="${eclipse.launcher}" fork="true" dir="${basedir}">
-			<arg value="-application"/>
-			<arg value="org.eclipse.ant.core.antRunner"/>
-			<arg value="-buildfile"/>
-			<arg value="${eclipse.pde.build}/scripts/productBuild/productBuild.xml"/>
-			<arg value="-DbaseLocation=${baseLocation}"/>
-			<arg value="-Dproduct=${basedir}/eclipsetrader.product"/>
-			<arg value="-DbuildType=${buildType}"/>
-			<arg value="-DbuildId=${buildId}"/>
-			<arg value="-DbuildLabel=updates"/>
-			<arg value="-Dtimestamp=${timestamp}"/>
-			<arg value="-DbuildDirectory=${buildDirectory}"/>
-			<arg value="-Dp2.gathering=true"/>
-			<arg value="-Dp2.build.repo=file:${buildDirectory}/updates"/>
-			<arg value="-Dp2.compress=true"/>
-			<arg value="-Dp2.flavor=tooling"/>
-			<arg value="-Dp2.publish.artifacts=true"/>
-			<arg value="-DskipDirector=true"/>
-		</java>
+        <java jar="${eclipse.launcher}" fork="true" dir="${basedir}">
+            <arg value="-application"/>
+            <arg value="org.eclipse.ant.core.antRunner"/>
+            <arg value="-buildfile"/>
+            <arg value="${eclipse.pde.build}/scripts/productBuild/productBuild.xml"/>
+            <arg value="-DbaseLocation=${baseLocation}"/>
+            <arg value="-Dproduct=${basedir}/eclipsetrader.product"/>
+            <arg value="-DbuildType=${buildType}"/>
+            <arg value="-DbuildId=${buildId}"/>
+            <arg value="-DbuildLabel=updates"/>
+            <arg value="-Dtimestamp=${timestamp}"/>
+            <arg value="-DbuildDirectory=${buildDirectory}"/>
+            <arg value="-Dp2.gathering=true"/>
+            <arg value="-Dp2.build.repo=file:${buildDirectory}/updates"/>
+            <arg value="-Dp2.compress=true"/>
+            <arg value="-Dp2.flavor=tooling"/>
+            <arg value="-Dp2.publish.artifacts=true"/>
+            <arg value="-DskipDirector=true"/>
+        </java>
+
+        <java jar="${eclipse.launcher}" fork="true" dir="${basedir}">
+            <arg value="-application"/>
+            <arg value="org.eclipse.ant.core.antRunner"/>
+            <arg value="-buildfile"/>
+            <arg value="${eclipse.pde.build}/scripts/build.xml"/>
+            <arg value="-DbaseLocation=${buildDirectory}/updates"/>
+            <arg value="-DtopLevelElementId=org.eclipsetrader.repository.hibernate" />
+            <arg value="-DtopLevelElementType=feature" />
+            <arg value="-DbuildId=${buildId}"/>
+            <arg value="-DbuildLabel=updates"/>
+            <arg value="-Dtimestamp=${timestamp}"/>
+            <arg value="-DbuildDirectory=${buildDirectory}"/>
+            <arg value="-Dconfigs=*,*,*"/>
+            <arg value="-Dgenerate.p2.metadata=true"/>
+            <arg value="-Dp2.metadata.repo=file:${buildDirectory}/updates"/>
+            <arg value="-Dp2.artifact.repo=file:${buildDirectory}/updates"/>
+            <arg value="-Dp2.flavor=tooling"/>
+            <arg value="-Dp2.publish.artifacts=true"/>
+        </java>
+
+        <java jar="${eclipse.launcher}" fork="true" dir="${basedir}">
+            <arg value="-application"/>
+            <arg value="org.eclipse.ant.core.antRunner"/>
+            <arg value="-buildfile"/>
+            <arg value="${eclipse.pde.build}/scripts/build.xml"/>
+            <arg value="-DbaseLocation=${buildDirectory}/updates"/>
+            <arg value="-DtopLevelElementId=org.eclipsetrader.repository.hibernate.derby" />
+            <arg value="-DtopLevelElementType=feature" />
+            <arg value="-DbuildId=${buildId}"/>
+            <arg value="-DbuildLabel=updates"/>
+            <arg value="-Dtimestamp=${timestamp}"/>
+            <arg value="-DbuildDirectory=${buildDirectory}"/>
+            <arg value="-Dconfigs=*,*,*"/>
+            <arg value="-Dgenerate.p2.metadata=true"/>
+            <arg value="-Dp2.metadata.repo=file:${buildDirectory}/updates"/>
+            <arg value="-Dp2.artifact.repo=file:${buildDirectory}/updates"/>
+            <arg value="-Dp2.flavor=tooling"/>
+            <arg value="-Dp2.publish.artifacts=true"/>
+        </java>
+
+        <java jar="${eclipse.launcher}" fork="true" dir="${basedir}">
+            <arg value="-application"/>
+            <arg value="org.eclipse.ant.core.antRunner"/>
+            <arg value="-buildfile"/>
+            <arg value="${eclipse.pde.build}/scripts/build.xml"/>
+            <arg value="-DbaseLocation=${buildDirectory}/updates"/>
+            <arg value="-DtopLevelElementId=org.eclipsetrader.repository.hibernate.postgresql" />
+            <arg value="-DtopLevelElementType=feature" />
+            <arg value="-DbuildId=${buildId}"/>
+            <arg value="-DbuildLabel=updates"/>
+            <arg value="-Dtimestamp=${timestamp}"/>
+            <arg value="-DbuildDirectory=${buildDirectory}"/>
+            <arg value="-Dconfigs=*,*,*"/>
+            <arg value="-Dgenerate.p2.metadata=true"/>
+            <arg value="-Dp2.metadata.repo=file:${buildDirectory}/updates"/>
+            <arg value="-Dp2.artifact.repo=file:${buildDirectory}/updates"/>
+            <arg value="-Dp2.flavor=tooling"/>
+            <arg value="-Dp2.publish.artifacts=true"/>
+        </java>
 
 		<java jar="${eclipse.launcher}" fork="true" dir="${basedir}">
 			<arg line="-application" />
