--- a/org.eclipsetrader.core.ats/build.properties
+++ b/org.eclipsetrader.core.ats/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               epl-v10.html
+               epl-v10.html,\
+               plugin.xml
