Implemented wizard, properties, explorer view and editor for script-based strategies
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1620 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui.ats/plugin.xml
+++ b/org.eclipsetrader.ui.ats/plugin.xml
@@ -19,5 +19,141 @@
          </perspectiveShortcut>
       </perspectiveExtension>
    </extension>
+   <extension
+         point="org.eclipse.ui.views">
+      <category
+            id="org.eclipsetrader.ui.ats"
+            name="ATS">
+      </category>
+      <view
+            category="org.eclipsetrader.ui.ats"
+            class="org.eclipsetrader.ui.internal.ats.ExplorerViewPart"
+            icon="icons/eview16/cog.png"
+            id="org.eclipsetrader.ui.ats.views.explorer"
+            name="Strategy Explorer"
+            restorable="true">
+      </view>
+      <view
+            allowMultiple="true"
+            category="org.eclipsetrader.ui.ats"
+            class="org.eclipsetrader.ui.internal.ats.ScriptEditor"
+            icon="icons/obj16/page_white_code.png"
+            id="org.eclipsetrader.ui.ats.scritpstrategy.editor"
+            name="Script Strategy Editor"
+            restorable="true">
+      </view>
+   </extension>
+   <extension
+         point="org.eclipse.ui.newWizards">
+      <category
+            id="org.eclipsetrader.ui.ats"
+            name="ATS">
+      </category>
+      <wizard
+            category="org.eclipsetrader.ui.ats"
+            class="org.eclipsetrader.ui.internal.ats.ScriptStrategyWizard"
+            hasPages="true"
+            icon="icons/eview16/cog.png"
+            id="org.eclipsetrader.ui.ats.scriptstrategy.wizard"
+            name="Script Strategy"
+            preferredPerspectives="org.eclipsetrader.ui.ats.perspective">
+      </wizard>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.adapters">
+      <factory
+            adaptableType="org.eclipsetrader.ui.internal.ats.StrategyItem"
+            class="org.eclipsetrader.ui.internal.ats.ExplorerViewItemAdapterFactory">
+         <adapter
+               type="org.eclipsetrader.core.ats.ScriptStrategy">
+         </adapter>
+         <adapter
+               type="org.eclipsetrader.core.ats.IScriptStrategy">
+         </adapter>
+         <adapter
+               type="org.eclipsetrader.core.ats.IStrategy">
+         </adapter>
+      </factory>
+      <factory
+            adaptableType="org.eclipsetrader.ui.internal.ats.InstrumentItem"
+            class="org.eclipsetrader.ui.internal.ats.ExplorerViewItemAdapterFactory">
+         <adapter
+               type="org.eclipsetrader.core.instruments.Security">
+         </adapter>
+         <adapter
+               type="org.eclipsetrader.core.instruments.ISecurity">
+         </adapter>
+      </factory>
+      <factory
+            adaptableType="org.eclipsetrader.ui.internal.ats.ScriptItem"
+            class="org.eclipsetrader.ui.internal.ats.ExplorerViewItemAdapterFactory">
+         <adapter
+               type="org.eclipsetrader.core.Script">
+         </adapter>
+         <adapter
+               type="org.eclipsetrader.core.IScript">
+         </adapter>
+      </factory>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            commandId="org.eclipse.ui.file.properties">
+         <class
+               class="org.eclipsetrader.ui.internal.ats.StrategyPropertiesHandler">
+         </class>
+         <activeWhen>
+            <and>
+               <count
+                     value="1">
+               </count>
+               <iterate>
+                  <adapt
+                        type="org.eclipsetrader.core.ats.ScriptStrategy">
+                  </adapt>
+               </iterate>
+            </and>
+         </activeWhen>
+      </handler>
+      <handler
+            commandId="org.eclipse.ui.file.open">
+         <class
+               class="org.eclipsetrader.ui.internal.ats.StrategyScriptEditHandler">
+         </class>
+         <activeWhen>
+            <and>
+               <count
+                     value="+">
+               </count>
+               <iterate
+                     operator="and">
+                  <instanceof
+                        value="org.eclipsetrader.ui.internal.ats.MainScriptItem">
+                  </instanceof>
+               </iterate>
+            </and>
+         </activeWhen>
+      </handler>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="popup:org.eclipse.ui.popup.any?after=group.open">
+         <command
+               commandId="org.eclipse.ui.file.open"
+               mnemonic="O">
+            <visibleWhen>
+               <or>
+                  <iterate
+                        operator="or">
+                     <instanceof
+                           value="org.eclipsetrader.ui.internal.ats.MainScriptItem">
+                     </instanceof>
+                  </iterate>
+               </or>
+            </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
 
 </plugin>
