Scripts updated to build from working directory
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1628 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.releng/build.properties
+++ b/org.eclipsetrader.releng/build.properties
@@ -26,12 +26,12 @@ configs=\
 forceContextQualifier=v${timestamp}
 generateFeatureVersionSuffix=true
 
-p2.gathering=true
-p2.build.repo=file:${buildDirectory}/repo
+# p2.gathering=true
+# p2.build.repo=file:${buildDirectory}/updates
 # p2.metadata.repo=file:${buildDirectory}/artifact
 # p2.artifact.repo=file:${buildDirectory}/artifact
-p2.compress=true
-p2.flavor=tooling
+# p2.compress=true
+# p2.flavor=tooling
 # p2.publish.artifacts=true
 
 skipBase=true
